# gpu-kernel-batcher

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
scripts/: analyze_results.py
src/lib/: gemm.rs  ipc.rs  mod.rs  model.rs  workload.rs
